--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-		"allowJs": true,
+		// "allowJs": true,
 		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
@@ -10,6 +10,12 @@
 		"sourceMap": true,
 		"strict": true
 	}
+	// "include": ["./**/*"],
+	// "exclude": [
+	// 	"./plugins/**/*",
+	// 	"./typings/**/*",
+	// 	"./built/**/*" // This is what fixed it!
+	// ]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
