--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "portfolio_3.0",
-	"version": "0.0.1",
+	"name": "portfolio",
+	"version": "3.0.1",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
