--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
 	},
 	"dependencies": {
 		"@types/gtag.js": "^0.0.12",
-		"graphql-request": "^5.2.0",
-		"mysvelte-ui": "^0.0.21",
-		"node-sass": "^7.0.3",
-		"octokit": "^2.0.14"
+		"github-commit-calendar": "^0.0.12",
+		"mysvelte-ui": "^0.0.21"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
